<resources>
    <string name="app_name">cse438-assignment2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">BACK</string>
    <string name="pause">PAUSE</string>
    <string name="play">PLAY</string>
    <string name="submit">SUBMIT</string>
    <string name="name">Name of playlist</string>
    <string name="description">Description of playlist</string>
    <string name="rate">Rating of playlist(0-10)</string>
    <string name="genre">Genre of playlist</string>
    <string name="keyword">Input the keyword</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="remove">REMOVE</string>
</resources>
