<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/pl_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="130dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/pl_description"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/pl_rate"
        android:hint="@string/rate"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pl_genre"
        android:hint="@string/genre"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/submitPlaylist"
            android:text="@string/submit"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>